Fixed some layout issues using HTML and JS. TODO: Create results page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
 .trivia {
   display: none;
 }
+#submit {
+  display: none;
+}
